feat: product page add cursor pointer

--- a/product.html
+++ b/product.html
@@ -13,16 +13,16 @@
       <header class="product-header">
          <nav class="home-nav-menu">
             <div class="burger-btn" onclick="toggleMenu()">
-               <img class="svg-class" src="./assets/icon/nav-btn-dark.svg" alt="" />
+               <img class="svg-class pointer" src="./assets/icon/nav-btn-dark.svg" alt="" />
             </div>
             <div class="logo-icon">
                <img src="./assets/icon/Logo_Apriori-dark.svg" alt="" />
             </div>
             <ul class="nav-buttons">
-               <li><img src="./assets/icon/nav-1-dark.svg" alt="" /></li>
-               <li><img src="./assets/icon/nav-2-dark.svg" alt="" /></li>
-               <li><img src="./assets/icon/nav-3-dark.svg" alt="" /></li>
-               <li><img src="./assets/icon/nav-4-dark.svg" alt="" /></li>
+               <li class="pointer"><img src="./assets/icon/nav-1-dark.svg" alt="" /></li>
+               <li class="pointer"><img src="./assets/icon/nav-2-dark.svg" alt="" /></li>
+               <li class="pointer"><img src="./assets/icon/nav-3-dark.svg" alt="" /></li>
+               <li class="pointer"><img src="./assets/icon/nav-4-dark.svg" alt="" /></li>
             </ul>
          </nav>
 
@@ -99,7 +99,7 @@
                   <img src="./assets/content/product-main.png" class="img-default" alt="" />
                </div>
                <div class="product-page-photo play-video-btn-box" style="background-image: url(./assets/content/product-sub-1.png)">
-                  <img class="" src="./assets/icon/play-fill.svg" alt="" />
+                  <img class="pointer" src="./assets/icon/play-fill.svg" alt="" />
                </div>
                <div class="product-page-photo" style="background-image: url(./assets/content/product-sub-2.png)"></div>
                <div class="product-page-photo" style="background-image: url(./assets/content/product-sub-3.png)"></div>
@@ -117,10 +117,10 @@
                <p class="right-p-p_in-stock">в наличии 5 шт</p>
                <p class="right-p-p_price-title">Цвет</p>
                <div class="right-p-p_color-change">
-                  <div class="right-p-p_color__box right-p-p_color__value-active">
+                  <div class="right-p-p_color__box pointer right-p-p_color__value-active">
                      <div class="right-p-p_color__value p-p-value-1"></div>
                   </div>
-                  <div class="right-p-p_color__box">
+                  <div class="right-p-p_color__box pointer">
                      <div class="right-p-p_color__value p-p-value-2"></div>
                   </div>
                </div>
@@ -132,7 +132,7 @@
                <div class="right-p-p_price-show-more">
                   <img class="opacity" src="./assets/icon/gray-circle.svg" alt="" />
                   <div class="gray-line_line-24"></div>
-                  <div class="right-p-p_show-more-btn">
+                  <div class="right-p-p_show-more-btn pointer">
                      <img src="./assets/icon/download-btn.svg" alt="" />
                      <p>Полное описание</p>
                   </div>
@@ -140,10 +140,10 @@
                   <img class="opacity" src="./assets/icon/gray-circle.svg" alt="" />
                </div>
                <div class="right-p-p_control-panel">
-                  <div class="right-p-p_control__to-cart">В корзину</div>
-                  <div class="right-p-p_control__like"><img src="./assets/icon/like-without-radius.svg" alt="" style="width: 24px; margin: auto" /></div>
+                  <div class="right-p-p_control__to-cart pointer">В корзину</div>
+                  <div class="right-p-p_control__like pointer"><img src="./assets/icon/like-without-radius.svg" alt="" style="width: 24px; margin: auto" /></div>
                   <p class="right-p-p_control__text">Спросить в Telegram</p>
-                  <img src="./assets/icon/telegram-1-black.svg" alt="" />
+                  <img class="pointer" src="./assets/icon/telegram-1-black.svg" alt="" />
                </div>
             </div>
             <div class="dscription-p-p">
