feat: show/hide add to discription on item or product page

--- a/product.html
+++ b/product.html
@@ -128,13 +128,17 @@
                <p class="right-p-p_price-discription">
                   Настенное золотое зеркало Лучи солнца, размер 89 см. Божественное дизайнерское зеркало в форме Солнца, оно придаст вашему интерьеру изысканности. Будет превосходно в интерьере
                   гостиной или спальни в современном стиле, фьюжн, арт-деко, лофт
+                  <span class="right-p-p_price-discription_hide">
+                     Настенное золотое зеркало Лучи солнца, размер 89 см. Божественное дизайнерское зеркало в форме Солнца, оно придаст вашему интерьеру изысканности. Будет превосходно в интерьере
+                     гостиной или спальни в современном стиле, фьюжн, арт-деко, лофт</span
+                  >
                </p>
                <div class="right-p-p_price-show-more">
                   <img class="opacity" src="./assets/icon/gray-circle.svg" alt="" />
                   <div class="gray-line_line-24"></div>
-                  <div class="right-p-p_show-more-btn pointer">
-                     <img src="./assets/icon/download-btn.svg" alt="" />
-                     <p>Полное описание</p>
+                  <div class="right-p-p_show-more-btn pointer" onclick="toggleProductDisc()">
+                     <img class="right-p-p_show-more-img" src="./assets/icon/download-btn.svg" alt="" />
+                     <p class="right-p-p_show-more-text">Полное описание</p>
                   </div>
                   <div class="gray-line_line-24"></div>
                   <img class="opacity" src="./assets/icon/gray-circle.svg" alt="" />
@@ -300,5 +304,6 @@
       </footer>
    </body>
    <script src="./js/product.js"></script>
+   <script src="./js/product-show.js"></script>
    <script src="./js/nav-menu.js"></script>
 </html>
