feat: burger menu add mropdown function for all pages + adaptive

--- a/product.html
+++ b/product.html
@@ -44,7 +44,7 @@
             </nav>
             <div class="hidden-nav-menu">
                <ul class="nav-list">
-                  <li class="nav-list-title"><a href="">Каталог</a></li>
+                  <li class="nav-list-title">Каталог</li>
                   <li class="nav-list-list pointer"><a href="">Часы</a></li>
                   <li class="nav-list-list pointer"><a href="">Зеркала</a></li>
                   <li class="nav-list-list pointer"><a href="">Вазы</a></li>
@@ -53,14 +53,14 @@
                </ul>
 
                <ul class="nav-list">
-                  <li class="nav-list-title"><a href="">Компания</a></li>
+                  <li class="nav-list-title">Компания</li>
                   <li class="nav-list-list pointer"><a href="">О нас</a></li>
                   <li class="nav-list-list pointer"><a href="">Сотрудничество</a></li>
                   <li class="nav-list-list pointer"><a href="">Проект для Вас</a></li>
                   <li class="nav-list-list pointer"><a href="">Вакансии</a></li>
                </ul>
                <ul class="nav-list">
-                  <li class="nav-list-title"><a href="">Покупателям</a></li>
+                  <li class="nav-list-title">Покупателям</li>
                   <li class="nav-list-list pointer"><a href="">Часы</a></li>
                   <li class="nav-list-list pointer"><a href="">Зеркала</a></li>
                   <li class="nav-list-list pointer"><a href="">Вазы</a></li>
@@ -70,7 +70,7 @@
                   <li class="nav-list-list pointer"><a href="">Отзывы</a></li>
                </ul>
                <ul class="nav-list">
-                  <li class="nav-list-title"><a href="">Обратная связь</a></li>
+                  <li class="nav-list-title">Обратная связь</li>
                   <li class="nav-list-list pointer"><a href="tel:+79137995306">+7 (913) 799-53-06</a></li>
                   <li class="nav-list-list pointer"><a href="mailto:info@aprioridecor.ru">info@aprioridecor.ru</a></li>
                   <ul class="nav-list_social-list">
