feat: basket adaptive complete all

--- a/basket.html
+++ b/basket.html
@@ -105,75 +105,91 @@
                </div>
                <div class="basket">
                   <h3 class="basket_title">Ваши товары</h3>
-                  <div class="basket_product">
+                  <div class="basket_product discont">
                      <img src="./assets/content/catalog-item-1.png" alt="" class="interior_product-box__img" />
-                     <div class="basket_product__text">
-                        <p class="basket_product__text-title">Зеркало Лучи солнца</p>
-                        <p class="basket_product__text-subtitle">89 см | Золотое</p>
+                     <div class="basket-product__mid discont">
+                        <div class="basket_product__text">
+                           <p class="basket_product__text-title">Зеркало Лучи солнца</p>
+                           <p class="basket_product__text-subtitle">89 см | Золотое</p>
+                        </div>
+                        <img class="product_like-icon" src="./assets/icon/like-black.svg" alt="" />
+                        <div class="product_discont-value">-15%</div>
                      </div>
-                     <img src="./assets/icon/like-black.svg" alt="" />
-                     <div class="product_discont-value">-15%</div>
-                     <div class="basket-count-buttons none">
-                        <div class="basket-btn_plus"></div>
-                        <div class="basket-btn_minus"></div>
-                     </div>
-                     <div class="basket-product-price-box">
-                        <div class="product-box__price___price">45 900 <span>₽</span></div>
-                        <div class="product-box__price___price-old opacity">51 900 ₽</div>
+                     <div class="basket-product__end discont">
+                        <div class="basket-count-buttons buttons-block">
+                           <div class="basket-btn_plus"></div>
+                           <div class="basket-btn_minus"></div>
+                        </div>
+                        <div class="basket-product-price-box">
+                           <div class="product-box__price___price">45 900 <span>₽</span></div>
+                           <div class="product-box__price___price-old opacity">51 900 ₽</div>
+                        </div>
                      </div>
                   </div>
                   <div class="basket-product-box hover">
                      <input class="basket-checkbox" type="checkbox" />
                      <div class="basket_product in-cart">
                         <img src="./assets/content/interiour-dop-2.png" alt="" class="interior_product-box__img" />
-                        <div class="basket_product__text">
-                           <p class="basket_product__text-title">Интерьерная подушка в восточном стиле</p>
-                           <p class="basket_product__text-subtitle">48 см</p>
+                        <div class="basket-product__mid target">
+                           <div class="basket_product__text">
+                              <p class="basket_product__text-title">Интерьерная подушка в восточном стиле</p>
+                              <p class="basket_product__text-subtitle">48 см</p>
+                           </div>
+                           <img class="product_like-icon" src="./assets/icon/like-black.svg" alt="" />
+                           <div class="product_discont-value none">-15%</div>
                         </div>
-                        <img src="./assets/icon/like-black.svg" alt="" />
-                        <div class="product_discont-value none">-15%</div>
-                        <div class="basket-count-buttons">
-                           <div class="basket-btn_plus"></div>
-                           <div class="basket-btn_minus"></div>
-                        </div>
-                        <div class="basket-product-price-box">
-                           <div class="product-box__price___price">3 х 4 900 <span>₽</span></div>
-                           <div class="product-box__price___price-old zero-opacity">51 900 ₽</div>
+                        <div class="basket-product__end">
+                           <div class="basket-count-buttons">
+                              <div class="basket-btn_plus"></div>
+                              <div class="basket-btn_minus"></div>
+                           </div>
+                           <div class="basket-product-price-box">
+                              <div class="product-box__price___price">3 х 4 900 <span>₽</span></div>
+                              <div class="product-box__price___price-old zero-opacity">51 900 ₽</div>
+                           </div>
                         </div>
                      </div>
                   </div>
                   <div class="basket_product">
                      <img src="./assets/content/interiour-dop-1.png" alt="" class="interior_product-box__img" />
-                     <div class="basket_product__text">
-                        <p class="basket_product__text-title">Свечи для романтического вечера Wax Lyrical</p>
-                        <p class="basket_product__text-subtitle">25 см | Терракота</p>
+                     <div class="basket-product__mid">
+                        <div class="basket_product__text">
+                           <p class="basket_product__text-title">Свечи для романтического вечера Wax Lyrical</p>
+                           <p class="basket_product__text-subtitle">25 см | Терракота</p>
+                        </div>
+                        <img class="product_like-icon" src="./assets/icon/like-black.svg" alt="" />
+                        <div class="product_discont-value none">-15%</div>
                      </div>
-                     <img src="./assets/icon/like-black.svg" alt="" />
-                     <div class="product_discont-value none">-15%</div>
-                     <div class="basket-count-buttons none">
-                        <div class="basket-btn_plus"></div>
-                        <div class="basket-btn_minus"></div>
-                     </div>
-                     <div class="basket-product-price-box">
-                        <div class="product-box__price___price">300 <span>₽</span></div>
-                        <div class="product-box__price___price-old zero-opacity">51 900 ₽</div>
+                     <div class="basket-product__end">
+                        <div class="basket-count-buttons buttons-block">
+                           <div class="basket-btn_plus"></div>
+                           <div class="basket-btn_minus"></div>
+                        </div>
+                        <div class="basket-product-price-box">
+                           <div class="product-box__price___price">300 <span>₽</span></div>
+                           <div class="product-box__price___price-old zero-opacity">51 900 ₽</div>
+                        </div>
                      </div>
                   </div>
                   <div class="basket_product">
                      <img src="./assets/content/svecha-aromatyzyrovannaia-s-podsvechnykom-pentas-belaia-bezhevaia-701025 1.png" alt="" class="interior_product-box__img" />
-                     <div class="basket_product__text">
-                        <p class="basket_product__text-title">Свеча белая на подставке</p>
-                        <p class="basket_product__text-subtitle">12 см | Без запаха</p>
+                     <div class="basket-product__mid">
+                        <div class="basket_product__text">
+                           <p class="basket_product__text-title">Свеча белая на подставке</p>
+                           <p class="basket_product__text-subtitle">12 см | Без запаха</p>
+                        </div>
+                        <img class="product_like-icon" src="./assets/icon/like-black.svg" alt="" />
+                        <div class="product_discont-value none">-15%</div>
                      </div>
-                     <img src="./assets/icon/like-black.svg" alt="" />
-                     <div class="product_discont-value none">-15%</div>
-                     <div class="basket-count-buttons none">
-                        <div class="basket-btn_plus"></div>
-                        <div class="basket-btn_minus"></div>
-                     </div>
-                     <div class="basket-product-price-box">
-                        <div class="product-box__price___price">0 <span>₽</span></div>
-                        <div class="product-box__price___price-old gift opacity">В подарок</div>
+                     <div class="basket-product__end">
+                        <div class="basket-count-buttons buttons-block">
+                           <div class="basket-btn_plus"></div>
+                           <div class="basket-btn_minus"></div>
+                        </div>
+                        <div class="basket-product-price-box">
+                           <div class="product-box__price___price">0 <span>₽</span></div>
+                           <div class="product-box__price___price-old gift opacity">В подарок</div>
+                        </div>
                      </div>
                   </div>
                </div>
@@ -208,7 +224,7 @@
                   <p class="product-box__price___price-old opacity total-summ-old">66 900 ₽</p>
                   <div class="summ-block_row summ-total-row">
                      <p class="summ-title">Итог :</p>
-                     <p class="block_row__price">60 900 <span>₽</span></p>
+                     <p class="block_row__price last-price">60 900 <span>₽</span></p>
                   </div>
                   <div class="summ-checkout-btn">Оформить заказ</div>
                </div>
