feat: booking page adaptive complete

--- a/booking.html
+++ b/booking.html
@@ -102,7 +102,7 @@
             <h1 class="title-home title-no-home">Оформление заказа</h1>
             <div class="basket-zone">
                <div class="basket">
-                  <h3 class="basket_title">Контактное лицо</h3>
+                  <h3 class="basket_title form-booking-title">Контактное лицо</h3>
                   <form class="booking-form" action="">
                      <input type="text" class="booking-form_input b-f-i-1" placeholder="Ваше имя" />
                      <input type="text" class="booking-form_input b-f-i-2" placeholder="Ваша фамилия" />
