feat: cabinet -> bonus adaptive complete

--- a/cabinet.html
+++ b/cabinet.html
@@ -148,7 +148,7 @@
                      <div class="cabinet-change-pass-btn pointer">Изменить пароль</div>
                   </div>
                </div>
-               <div class="basket-summ">
+               <div class="basket-summ cabinet-bonus-itog">
                   <h3 class="basket_title">Ваш кешбэк</h3>
                   <div class="cashback-listener">
                      <div class="cashback-listener_values">
@@ -273,7 +273,7 @@
                      Все ваши покупки суммируются. Когда накапливается 30 000 ₽, то кешбэк увеличивается до 5%, при сумме 60 000 ₽ — кешбэк будет уже 8%. При сумме 150.000 ₽  — 12%
                   </p>
                </div>
-               <div class="basket-summ">
+               <div class="basket-summ cabinet-bonus-itog">
                   <h3 class="basket_title">Ваш кешбэк</h3>
                   <div class="cashback-listener">
                      <div class="cashback-listener_values">
