feat: catalog adaptive update, revork slider/AKA switcher of favorite products

--- a/catalog.html
+++ b/catalog.html
@@ -414,13 +414,17 @@
                </div>
             </div>
             <div class="third-section-control-panel">
-               <img src="./assets/icon/Frame 482379.svg" alt="" />
+               <img class="mouse-swipe-img" src="./assets/icon/Frame 482379.svg" alt="" />
                <div class="control-panel_pag-btns">
                   <img class="control-panel_prev-btn unactive" src="./assets/icon/Button (7).svg" alt="" />
+                  <div class="pag-line">
+                     <p class="pag-line__pag-active"></p>
+                  </div>
                   <img class="control-panel_next-btn" src="./assets/icon/Button (7).svg" alt="" />
                </div>
             </div>
          </section>
+
          <section class="section-default section-m-50">
             <h2 class="h2-section mb">Наши социальные сети</h2>
 
@@ -574,6 +578,7 @@
    </body>
    <script src="js/classie.js"></script>
    <script src="js/nav-menu.js"></script>
+   <script src="js/catalog.js"></script>
    <script src="js/selectFx.js"></script>
    <script>
       (function () {
