feat: add grey bg + scroll block in nav menu active time

--- a/catalog.html
+++ b/catalog.html
@@ -575,6 +575,7 @@
             </div>
          </div>
       </footer>
+      <div class="grey-bg"></div>
    </body>
    <script src="js/classie.js"></script>
    <script src="js/nav-menu.js"></script>
