--- a/product.html
+++ b/product.html
@@ -302,6 +302,7 @@
             </div>
          </div>
       </footer>
+      <div class="grey-bg"></div>
    </body>
    <script src="./js/product.js"></script>
    <script src="./js/product-show.js"></script>
