--- a/basket.html
+++ b/basket.html
@@ -419,6 +419,7 @@
             </div>
          </div>
       </footer>
+      <div class="grey-bg"></div>
    </body>
    <script src="./js/product.js"></script>
    <script src="./js/nav-menu.js"></script>
