--- a/cabinet.html
+++ b/cabinet.html
@@ -449,6 +449,7 @@
             </div>
          </div>
       </footer>
+      <div class="grey-bg"></div>
    </body>
    <script src="./js/booking.js"></script>
    <script src="./js/nav-menu.js"></script>
