--- a/collection.html
+++ b/collection.html
@@ -470,6 +470,7 @@
             </div>
          </div>
       </footer>
+      <div class="grey-bg"></div>
    </body>
    <script src="./js/accordeon.js"></script>
    <script src="./js/nav-menu.js"></script>
