--- a/home.html
+++ b/home.html
@@ -590,6 +590,7 @@
             </div>
          </div>
       </footer>
+      <div class="grey-bg"></div>
    </body>
    <script src="./js/index.js"></script>
    <script src="./js/nav-menu.js"></script>
