feat: product page is complete adaptive

--- a/product.html
+++ b/product.html
@@ -94,16 +94,18 @@
       </header>
       <main>
          <section class="section-default p-p-section">
-            <div class="left-p-p">
-               <div class="product-page-main-photo">
-                  <img src="./assets/content/product-main.png" class="img-default" alt="" />
+            <div class="left-p-p-overflow">
+               <div class="left-p-p">
+                  <div class="product-page-main-photo">
+                     <img src="./assets/content/product-main.png" class="img-default" alt="" />
+                  </div>
+                  <div class="product-page-photo play-video-btn-box" style="background-image: url(./assets/content/product-sub-1.png)">
+                     <img class="pointer" src="./assets/icon/play-fill.svg" alt="" />
+                  </div>
+                  <div class="product-page-photo" style="background-image: url(./assets/content/product-sub-2.png)"></div>
+                  <div class="product-page-photo" style="background-image: url(./assets/content/product-sub-3.png)"></div>
+                  <div class="product-page-photo" style="background-image: url(./assets/content/product-sub-4.png)"></div>
                </div>
-               <div class="product-page-photo play-video-btn-box" style="background-image: url(./assets/content/product-sub-1.png)">
-                  <img class="pointer" src="./assets/icon/play-fill.svg" alt="" />
-               </div>
-               <div class="product-page-photo" style="background-image: url(./assets/content/product-sub-2.png)"></div>
-               <div class="product-page-photo" style="background-image: url(./assets/content/product-sub-3.png)"></div>
-               <div class="product-page-photo" style="background-image: url(./assets/content/product-sub-4.png)"></div>
             </div>
             <div class="right-p-p">
                <h1>Зеркало Лучи солнца</h1>
@@ -146,15 +148,19 @@
                <div class="right-p-p_control-panel">
                   <div class="right-p-p_control__to-cart pointer">В корзину</div>
                   <div class="right-p-p_control__like pointer"><img src="./assets/icon/like-without-radius.svg" alt="" style="width: 24px; margin: auto" /></div>
-                  <p class="right-p-p_control__text">Спросить в Telegram</p>
-                  <img class="pointer" src="./assets/icon/telegram-1-black.svg" alt="" />
+                  <div class="right-p-p-tg-container">
+                     <p class="right-p-p_control__text">Спросить в Telegram</p>
+                     <img class="pointer" src="./assets/icon/telegram-1-black.svg" alt="" />
+                  </div>
                </div>
             </div>
             <div class="dscription-p-p">
-               <div class="dscription-p-p_tabs">
-                  <p class="dscription-p-p_tab active">Характеристики</p>
-                  <p class="dscription-p-p_tab">Отзывы</p>
-                  <p class="dscription-p-p_tab">Дополнительная информация</p>
+               <div class="dscription-p-p_tabs-overflow">
+                  <div class="dscription-p-p_tabs">
+                     <p class="dscription-p-p_tab active">Характеристики</p>
+                     <p class="dscription-p-p_tab">Отзывы</p>
+                     <p class="dscription-p-p_tab">Дополнительная информация</p>
+                  </div>
                </div>
                <div class="dscription-p-p_text">
                   <h3 class="dscription-p-p_text__title">Характеристики товара</h3>
