feat: last seen products scroll pagination update for basket + booking pages

--- a/booking.html
+++ b/booking.html
@@ -242,9 +242,12 @@
                </div>
             </div>
             <div class="third-section-control-panel">
-               <img src="./assets/icon/Frame 482379.svg" alt="" />
+               <img class="mouse-swipe-img" src="./assets/icon/Frame 482379.svg" alt="" />
                <div class="control-panel_pag-btns">
                   <img class="control-panel_prev-btn unactive" src="./assets/icon/Button (7).svg" alt="" />
+                  <div class="pag-line">
+                     <p class="pag-line__pag-active"></p>
+                  </div>
                   <img class="control-panel_next-btn" src="./assets/icon/Button (7).svg" alt="" />
                </div>
             </div>
@@ -376,5 +379,6 @@
       <div class="grey-bg"></div>
    </body>
    <script src="./js/booking.js"></script>
+   <script src="./js/basket-scroll.js"></script>
    <script src="./js/nav-menu.js"></script>
 </html>
