feat: buttons slider control add to home page

--- a/home.html
+++ b/home.html
@@ -49,6 +49,10 @@
             Предметы интерьера, антикварные <br />
             и винтажные аксессуары по выгодной цене.
          </p>
+         <div class="header-slider-buttons">
+            <img class="header-slider-buttons_prev" src="./assets/icon/Button.svg" alt="" />
+            <img class="header-slider-buttons_next" src="./assets/icon/Button.svg" alt="" />
+         </div>
 
          <nav class="burger-nav-menu">
             <!-- mt112 -->
