feat: vertical slider update, video preview hide

--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
                Винтажные аксессуары <br />
                для дома и офиса
             </h1>
-            <div class="video-preview">
+            <div class="video-preview none">
                <img class="play-btn-home-preview" src="./assets/icon/Play.svg" alt="" />
             </div>
          </div>
