--- a/catalog.html
+++ b/catalog.html
@@ -498,17 +498,18 @@
       <footer>
          <div class="footer_left-side">
             <img src="./assets/icon/Logo_Apriori.svg" alt="" style="width: 182px" />
-            <div class="footer_discription">
+            <div class="footer_discription none">
                <p><span class="footer_bold-text">APRIORI DESIGN</span> © Все права защищены 2022 — 2023</p>
                <p>Cтоимость и условия приобретения товара действительны на текущую дату</p>
             </div>
          </div>
          <div class="footer_rignt-side">
-            <img class="footer-less-600 none" src="./assets/icon/Logo_Apriori.svg" alt="" style="width: 182px" />
+            <img class="footer-less-600 none" src="./assets/icon/logo-footer-small-blk-update.svg" alt="" style="width: 234px" />
             <div class="footer_rignt__ul-box">
                <h5 class="footer-title">Интернет-магазин</h5>
                <ul class="footer-u-list">
                   <li><a href="">Акции</a></li>
+                  <li><a href="">Дисконт</a></li>
                   <li><a href="">Все товары</a></li>
                   <li><a href="">Лояльность</a></li>
                   <li><a href="">Доставка и оплата</a></li>
@@ -518,15 +519,15 @@
             <div class="footer_rignt__ul-box">
                <h5 class="footer-title">Сервис</h5>
                <ul class="footer-u-list">
-                  <li><a href="">Помощь</a></li>
+                  <!-- <li><a href="">Помощь</a></li> -->
                   <li><a href="">Обратная связь</a></li>
                   <li><a href="">Адрес магазина</a></li>
                   <li><a href="">Публичная оферта</a></li>
                </ul>
             </div>
             <div class="line-into-block-footer">
-               <img class="line-into-block-footer_img" src="./assets/icon/Rectangle 1860.svg" alt="" />
-               <p class="line_line"></p>
+               <img class="line-into-block-footer_img" src="./assets/icon/circle-brown.svg" alt="" />
+               <p class="line_line footer-line_line"></p>
             </div>
             <div class="footer_rignt__ul-box">
                <h5 class="footer-title">Контакты</h5>
@@ -544,34 +545,36 @@
                   <li><a href="">Вакансии</a></li>
                </ul>
             </div>
-            <ul class="footer-social-webs">
-               <li>
-                  <a href=""><img src="./assets/icon/footer-whatsup.svg" alt="" /></a>
-               </li>
-               <li>
-                  <a href=""><img src="./assets/icon/footer-tg.svg" alt="" /></a>
-               </li>
-               <li>
-                  <a href=""><img src="./assets/icon/footer-ig.svg" alt="" /></a>
-               </li>
-               <li>
-                  <a href=""><img src="./assets/icon/footer-vk.svg" alt="" /></a>
-               </li>
-            </ul>
-            <ul class="footer-payment">
-               <li>
-                  <a href=""><img src="./assets/icon/Mastercard.svg" alt="" /></a>
-               </li>
-               <li>
-                  <a href=""><img src="./assets/icon/Visa.svg" alt="" /></a>
-               </li>
-               <li>
-                  <a href=""><img src="./assets/icon/MIR.svg" alt="" /></a>
-               </li>
-            </ul>
-            <div class="footer_discription footer-less-600 none">
-               <p><span class="footer_bold-text">APRIORI DESIGN</span> © Все права защищены 2022 — 2023</p>
-               <p>Cтоимость и условия приобретения товара действительны на текущую дату</p>
+            <div class="footer-bottob-container">
+               <ul class="footer-social-webs">
+                  <li>
+                     <a href=""><img src="./assets/icon/whatsupp-update-black.svg" alt="" /></a>
+                  </li>
+                  <li>
+                     <a href=""><img src="./assets/icon/telegram-update-black.svg" alt="" /></a>
+                  </li>
+                  <li>
+                     <a href=""><img src="./assets/icon/insta-update-black.svg" alt="" /></a>
+                  </li>
+                  <li>
+                     <a href=""><img src="./assets/icon/vk-update-black.svg" alt="" /></a>
+                  </li>
+               </ul>
+               <div class="footer_discription footer-less-600">
+                  <p class="ramillas-footer"><span class="footer_bold-text">APRIORI DESIGN</span> © Все права защищены 2022 — 2023</p>
+                  <p>Cтоимость и условия приобретения товара действительны на текущую дату</p>
+               </div>
+               <ul class="footer-payment">
+                  <li>
+                     <a href=""><img src="./assets/icon/Mastercard-update-black.svg" alt="" /></a>
+                  </li>
+                  <li>
+                     <a href=""><img src="./assets/icon/Visa-update-black.svg" alt="" /></a>
+                  </li>
+                  <li>
+                     <a href=""><img src="./assets/icon/MIR-update-black.svg" alt="" /></a>
+                  </li>
+               </ul>
             </div>
          </div>
       </footer>
