feat: greyBG close burger add onclick

--- a/booking.html
+++ b/booking.html
@@ -379,7 +379,7 @@
             </div>
          </div>
       </footer>
-      <div class="grey-bg"></div>
+       <div class="grey-bg" onclick="toggleMenu()"></div>
    </body>
    <script src="./js/booking.js"></script>
    <script src="./js/basket-scroll.js"></script>
