--- a/cabinet.html
+++ b/cabinet.html
@@ -452,7 +452,7 @@
             </div>
          </div>
       </footer>
-      <div class="grey-bg"></div>
+       <div class="grey-bg" onclick="toggleMenu()"></div>
    </body>
    <script src="./js/booking.js"></script>
    <script src="./js/nav-menu.js"></script>
