--- a/basket.html
+++ b/basket.html
@@ -425,7 +425,7 @@
             </div>
          </div>
       </footer>
-      <div class="grey-bg"></div>
+       <div class="grey-bg" onclick="toggleMenu()"></div>
    </body>
    <script src="./js/product.js"></script>
    <script src="./js/basket-scroll.js"></script>
