--- a/catalog.html
+++ b/catalog.html
@@ -578,7 +578,7 @@
             </div>
          </div>
       </footer>
-      <div class="grey-bg"></div>
+       <div class="grey-bg" onclick="toggleMenu()"></div>
    </body>
    <script src="js/classie.js"></script>
    <script src="js/nav-menu.js"></script>
