--- a/collection.html
+++ b/collection.html
@@ -473,7 +473,7 @@
             </div>
          </div>
       </footer>
-      <div class="grey-bg"></div>
+       <div class="grey-bg" onclick="toggleMenu()"></div>
    </body>
    <script src="./js/accordeon.js"></script>
    <script src="./js/nav-menu.js"></script>
