feat: all pages burger tab correct

--- a/collection.html
+++ b/collection.html
@@ -14,6 +14,7 @@
          <nav class="home-nav-menu z-2">
             <div class="burger-btn" onclick="toggleMenu()">
                <img class="svg-class" src="./assets/icon/Button (6).svg" alt="" />
+               <p class="menu-text">Меню</p>
             </div>
             <div class="logo-icon">
                <img src="./assets/icon/logo-update-w.svg" alt="" />
@@ -43,6 +44,7 @@
             <nav class="home-nav-menu">
                <div class="burger-btn" onclick="toggleMenu()">
                   <img class="svg-class" src="./assets/icon/nav-btn-dark.svg" alt="" />
+                  <p class="menu-text-black">Меню</p>
                </div>
                <div class="logo-icon">
                   <img src="./assets/icon/Logo_Apriori-dark.svg" alt="" />
