--- a/home.html
+++ b/home.html
@@ -59,6 +59,7 @@
             <nav class="home-nav-menu">
                <div class="burger-btn drop-btn" onclick="toggleMenu()">
                   <img class="svg-class" src="./assets/icon/nav-btn-dark.svg" alt="" />
+                  <p class="menu-text-black">Меню</p>
                </div>
                <div class="logo-icon">
                   <img src="./assets/icon/Logo_Apriori-dark.svg" alt="" />
