--- a/cabinet.html
+++ b/cabinet.html
@@ -14,6 +14,7 @@
          <nav class="home-nav-menu">
             <div class="burger-btn" onclick="toggleMenu()">
                <img class="svg-class pointer" src="./assets/icon/nav-btn-dark.svg" alt="" />
+               <p class="menu-text-black">Меню</p>
             </div>
             <div class="logo-icon">
                <img src="./assets/icon/Logo_Apriori-dark.svg" alt="" />
@@ -30,6 +31,7 @@
             <nav class="home-nav-menu">
                <div class="burger-btn" onclick="toggleMenu()">
                   <img class="svg-class" src="./assets/icon/nav-btn-dark.svg" alt="" />
+                  <p class="menu-text-black">Меню</p>
                </div>
                <div class="logo-icon">
                   <img src="./assets/icon/Logo_Apriori-dark.svg" alt="" />
@@ -452,7 +454,7 @@
             </div>
          </div>
       </footer>
-       <div class="grey-bg" onclick="toggleMenu()"></div>
+      <div class="grey-bg" onclick="toggleMenu()"></div>
    </body>
    <script src="./js/booking.js"></script>
    <script src="./js/nav-menu.js"></script>
