feat: view product hover effect update

--- a/catalog.html
+++ b/catalog.html
@@ -394,7 +394,7 @@
                            </div>
                            <div class="product-card_subdiscr">56 см | Фарфор</div>
                         </div>
-                        <img src="./assets/icon/in-baset.svg" alt="" />
+                        <img height="50px" src="./assets/icon/in-baset.svg" alt="" />
                      </div>
                   </div>
 
@@ -410,7 +410,7 @@
                            </div>
                            <div class="product-card_subdiscr">36 см | Настольная</div>
                         </div>
-                        <img src="./assets/icon/in-baset.svg" alt="" />
+                        <img height="50px" src="./assets/icon/in-baset.svg" alt="" />
                      </div>
                   </div>
                </div>
