feat: pag control btn-s update

--- a/home.html
+++ b/home.html
@@ -335,7 +335,7 @@
             </div>
             <div class="third-section-control-panel">
                <img class="mouse-swipe-img" src="./assets/icon/Frame 482379.svg" alt="" />
-               <div class="control-panel_pag-btns slider-switcher-hide">
+               <div class="control-panel_pag-btns slider-switcher-hide pag-btn-s-view">
                   <img class="control-panel_prev-btn unactive" src="./assets/icon/Button (7).svg" alt="" />
                   <div class="pag-line">
                      <p class="pag-line__pag-active"></p>
