--- a/cabinet.html
+++ b/cabinet.html
@@ -34,7 +34,7 @@
                   <p class="menu-text-black">Меню</p>
                </div>
                <div class="logo-icon">
-                  <img src="./assets/icon/Logo_Apriori-dark.svg" alt="" />
+                  <img style="width: 140px" src="./assets/icon/logo-footer-small-blk-update.svg" alt="logo" />
                </div>
                <ul class="nav-buttons">
                   <li><img src="./assets/icon/nav-1-dark.svg" alt="" /></li>
