--- a/collection.html
+++ b/collection.html
@@ -85,8 +85,8 @@
                </ul>
                <ul class="nav-list">
                   <li class="nav-list-title">Обратная связь</li>
-                  <li class="nav-list-list pointer"><a href="tel:+79137995306">+7 (913) 799-53-06</a></li>
-                  <li class="nav-list-list pointer"><a href="mailto:info@aprioridecor.ru">info@aprioridecor.ru</a></li>
+                  <li class="nav-list-list regular pointer"><a href="tel:+79137995306">+7 (913) 799-53-06</a></li>
+                  <li class="nav-list-list regular pointer"><a href="mailto:info@aprioridecor.ru">info@aprioridecor.ru</a></li>
                   <ul class="nav-list_social-list">
                      <li>
                         <a href=""><img src="./assets/icon/whatsupp-black.svg" alt="" /></a>
