feat: home slider icons update

--- a/home.html
+++ b/home.html
@@ -215,7 +215,7 @@
                   </div>
                   <div class="panel panel-second" style="background-image: url('./assets/content/wertical-slider-2.jpg')">
                      <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
-                     <img class="panel_style-icon" src="./assets/icon/slider-italian.svg" alt="" />
+                     <img class="panel_style-icon" src="./assets/icon/slider-usa.svg" alt="" />
                      <span class="vertical-line"></span>
                      <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
                      <div class="panel_magic-container">
@@ -228,7 +228,7 @@
                   </div>
                   <div class="panel panel-third" style="background-image: url('./assets/content/wertical-slider-3.jpg')">
                      <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
-                     <img class="panel_style-icon" src="./assets/icon/slider-italian.svg" alt="" />
+                     <img class="panel_style-icon" src="./assets/icon/slider-hi-teck.svg" alt="" />
                      <span class="vertical-line"></span>
                      <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
                      <div class="panel_magic-container">
@@ -241,7 +241,7 @@
                   </div>
                   <div class="panel panel-four" style="background-image: url('./assets/content/wertical-slider-4.jpg')">
                      <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
-                     <img class="panel_style-icon" src="./assets/icon/slider-italian.svg" alt="" />
+                     <img class="panel_style-icon" src="./assets/icon/slider-scandinav.svg" alt="" />
                      <span class="vertical-line"></span>
                      <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
                      <div class="panel_magic-container">
@@ -254,7 +254,7 @@
                   </div>
                   <div class="panel panel-five" style="background: black">
                      <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
-                     <img class="panel_style-icon" src="./assets/icon/slider-italian.svg" alt="" />
+                     <img class="panel_style-icon" src="./assets/icon/slider-no-name.svg" alt="" />
                      <span class="vertical-line"></span>
                      <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
                      <div class="panel_magic-container">
