feat: catalog tabs backround update

--- a/catalog.html
+++ b/catalog.html
@@ -109,7 +109,7 @@
                <button class="filter-btn-catalog-2">Сортировка</button>
             </div>
             <div class="filter-box">
-               <select class="cs-select cs-skin-rotate">
+               <select class="cs-select cs-skin-rotate bg-white">
                   <option value="1">Категории</option>
                   <option value="2">Зеркала</option>
                   <option value="3">Картины</option>
@@ -118,22 +118,22 @@
                   <option value="6">Композиции</option>
                   <option value="7">Новогоднее</option>
                </select>
-               <select class="cs-select cs-skin-rotate">
+               <select class="cs-select cs-skin-rotate bg-white">
                   <option value="1">Цена</option>
                   <option value="2">Дороже</option>
                   <option value="3">Дешевле</option>
                </select>
-               <select class="cs-select cs-plus">
+               <select class="cs-select cs-plus bg-white">
                   <option value="1">Цвет</option>
                   <option value="2">белый</option>
                   <option value="3">черный</option>
                </select>
-               <select class="cs-select cs-plus">
+               <select class="cs-select cs-plus bg-white">
                   <option value="1">Размер</option>
                   <option value="2">Большой</option>
                   <option value="3">Маленький</option>
                </select>
-               <select class="cs-select cs-plus">
+               <select class="cs-select cs-plus bg-white">
                   <option value="1">Материал</option>
                   <option value="2">Дерево</option>
                   <option value="3">Золото</option>
@@ -141,7 +141,7 @@
                <select class="cs-select cs-clear">
                   <option value="1">Очистить фильтр</option>
                </select>
-               <select class="cs-select cs-last">
+               <select class="cs-select cs-last border-none">
                   <option value="1">По популярности</option>
                   <option value="2">По убыванию</option>
                   <option value="3">По возрастанию</option>
